--- a/Simple_Work_Order/Simple_Work_Order/Simple_Work_Order.csproj
+++ b/Simple_Work_Order/Simple_Work_Order/Simple_Work_Order.csproj
@@ -6,4 +6,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SQLite" Version="1.0.114.4" />
+  </ItemGroup>
+
 </Project>
