--- a/Simple_Work_Order/Simple_Work_Order/Simple_Work_Order.csproj
+++ b/Simple_Work_Order/Simple_Work_Order/Simple_Work_Order.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="iTextSharp" Version="5.5.13.2" />
     <PackageReference Include="System.Data.SQLite" Version="1.0.114.4" />
   </ItemGroup>
 
